[package]
name = "nix-elastic-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
ureq = "2.9.1"
url = "2.5.0"
serde_path_to_error = "0.1.15"

scraper = {version = "0.18.1", optional = true}

[features]
version-search = ["dep:scraper"]
default = ["version-search"]
